headerProfile fix z-index

--- a/src/components/Header/HeaderProfile/HeaderProfile.module.scss
+++ b/src/components/Header/HeaderProfile/HeaderProfile.module.scss
@@ -1,5 +1,6 @@
 .profile {
   position: relative;
+  z-index: 9999;
 
   .profile_options {
     position: absolute;
